# earlyexit

./: .gitignore  ADOPTION_FEATURES_PLAN.md  ADVANCED_STUCK_COMPLETE.md  ADVANCED_STUCK_DETECTION_DESIGN.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR_RULE_TEST.md  DETACH_ENHANCEMENTS_COMPLETE.md  DETACH_MODE_DESIGN.md  DETACH_MODE_IMPLEMENTATION_COMPLETE.md  DOCS_CODE_SYNC_COMPLETE.md  DOCS_CODE_SYNC_FINAL.md  DOCS_CODE_SYNC_REPORT.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENV_EXPORT_FEATURE.md  EXPECT_ALLOWLIST_DOCS_COMPLETE.md  FD_INSPECTION_COMPLETE.md  FEATURE_SIMPLIFICATION_ANALYSIS.md  FIXES_SUMMARY.md  FLAG_NAME_COMPARISON.md  GREP_COMPATIBILITY_ADDED.md  GREP_COMPATIBILITY_ANALYSIS.md  GREP_COMPAT_IMPLEMENTATION_COMPLETE.md  GZIP_COMPRESSION_DOCUMENTATION.md  GZIP_INPUT_DESIGN.md  IMPLEMENTATION_PLAN_PHASE1_OBSERVABILITY.md  IMPLEMENTATION_PLAN_V0.0.5.md  JSON_IMPLEMENTATION_SUMMARY.md  LEARNING_IMPLEMENTATION_SUMMARY.md  LICENSE  MATCH_EVENT_TELEMETRY.md  MIST_FEATURES_FINAL_SUMMARY.md  MIST_FEEDBACK_RESPONSE.md  OBSERVABILITY_COMPLETE.md  OBSERVABILITY_PHASE1_COMPLETE.md  PARAMETER_ORDER_FIX.md  PATTERN_EXCLUSIONS_IMPLEMENTATION.md  PATTERN_TESTING_COMPLETE.md  PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  (+56 more)
.cursor/rules/: useearlyexit.mdc
.github/ISSUE_TEMPLATE/: config.yml  data-submission.md
community-patterns/: PROFILE_FORMAT_COMPLETE.json  README.md
community-patterns/infrastructure/: README.md  mist-aws-provision.json
community-patterns/nodejs/: npm-example.json
community-patterns/python/: example-pytest.json
docs/: AI_ADOPTION_STRATEGY.md  AI_ASSISTANT_GUIDE.md  APPEND_AND_GZIP_FEATURES.md  APPEND_FLAG_FIX_SUMMARY.md  APPEND_PID_BEHAVIOR_CHANGE.md  AUTO_LOGGING_DESIGN.md  AUTO_LOG_CHANGES_SUMMARY.md  AUTO_LOG_EE_ALIAS_SUMMARY.md  AUTO_LOG_QUICK_REFERENCE.md  AUTO_LOG_STATUS.md  AUTO_LOG_WORKING_SUMMARY.md  BLOG_POST_EARLY_EXIT.md  BLOG_WHY_TIMEOUT_TEE_IS_BROKEN.md  BUFFERING_AND_TEE.md  BUFFERING_CLARIFICATION_SUMMARY.md  BUFFERING_CRITICAL_CORRECTION.md  BUFFERING_DEMO.md  COMPARISON.md  COMPATIBILITY_SUMMARY.md  COMPLETE_SESSION_SUMMARY.md  CRITICAL_REVIEW.md  CURSOR_FORMAT_DISCOVERY_SUMMARY.md  CURSOR_RULES_FORMAT.md  CURSOR_RULES_TEMPLATE.md  DATA_COLLECTION_GUIDE.md  DATA_SUBMISSION_SUMMARY.md  EE_ALIAS.md  EXIT_CODES.md  FAQ.md  FILE_PREFIX_SMART_DETECTION.md  FINAL_SESSION_SUMMARY.md  FIRST_OUTPUT_TIME_TRACKING.md  FLAG_COMPATIBILITY_ANALYSIS.md  GREP_TEE_TIMEOUT_COMPATIBILITY.md  GZIP_FLAG_RESEARCH.md  GZIP_FLAG_UPDATE.md  MODE_COMPARISON.md  NO_AUTO_LOG_FLAG_RESEARCH.md  NO_LOG_FLAG_SUMMARY.md  PIPE_MODE_DELAY_EXIT.md  (+23 more)
docs/learnings/: CONCURRENCY_TEST_RESULTS.md  ENHANCEMENTS.md  FD_MONITORING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INTERACTIVE_LEARNING_MODE.md  LEARNING_SYSTEM.md  PHASE3_COMPLETE.md  PROJECT_STATUS.md  README.md  REGEX_REFERENCE.md  SOURCE_FILE_DETECTION.md  TELEMETRY_PERFORMANCE_RESULTS.md  TIMEOUT_GUIDE.md  VERSION_MANAGEMENT.md  WEEK1_LEARNINGS.md  WEEK2_LEARNINGS.md
earlyexit/: __init__.py  auto_logging.py  cli.py  cli_typer.py  commands.py  export_cli.py  features.py  inference.py  interactive.py  profile_cli.py  profiles.py  suggestions.py  telemetry.py  telemetry_cli.py  watch_mode.py
failfast/: __init__.py
tests/: README.md  test_advanced_stuck_detection.py  test_delay_exit.sh  test_delay_exit_features.py  test_detach_enhancements.py  test_earlyexit.py  test_exit_codes.py  test_failfast.py  test_fd.sh  test_features.py  test_interactive.py  test_json_output.py  test_ml_validation.py  test_pattern_exclusions.py  test_pattern_testing.py  test_pipe_delay_exit.sh  test_pipe_timeouts.sh  test_profiles.py  test_progress.py  test_shell_scripts.py  test_stuck_detection.py  test_subprocess_telemetry.py  test_success_pattern.py  test_syntax_and_limitations.sh  test_telemetry_cleanup.py  test_watch_fd_detection.sh  test_watch_mode.py  test_week3_integration.py
tests/fixtures/: __init__.py  real_world_errors.py
