[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "failfast"
version = "0.1.0"
description = "Fast-fail pattern matching for command output with early error detection"
authors = [
    {name = "Robert Lee", email = "robert.lee@databricks.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["cli", "grep", "pattern-matching", "early-exit", "fail-fast", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
perl = ["regex"]  # For Perl-compatible regex (-P flag)

[project.scripts]
failfast = "failfast.cli:main"

[project.urls]
Homepage = "https://github.com/robert-lee/failfast"
Repository = "https://github.com/robert-lee/failfast"
"Bug Tracker" = "https://github.com/robert-lee/failfast/issues"

[tool.setuptools]
packages = ["failfast"]

[tool.setuptools.package-data]
failfast = ["py.typed"]

