[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "earlyexit"
version = "0.0.1"
description = "Early exit pattern matching for command output with fast error detection"
authors = [
    {name = "Robert Lee", email = "robert.lee@databricks.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["cli", "grep", "pattern-matching", "early-exit", "fail-fast", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
perl = ["regex"]  # For Perl-compatible regex (-P flag)

[project.scripts]
earlyexit = "earlyexit.cli:main"

[project.urls]
Homepage = "https://github.com/rsleedbx/earlyexit"
Repository = "https://github.com/rsleedbx/earlyexit"
"Bug Tracker" = "https://github.com/rsleedbx/earlyexit/issues"

[tool.setuptools]
packages = ["earlyexit"]

[tool.setuptools.package-data]
earlyexit = ["py.typed"]

