[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "earlyexit"
version = "0.0.4"
description = "Early exit pattern matching for command output with fast error detection"
authors = [
    {name = "Robert Lee", email = "robert.lee@databricks.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["cli", "grep", "pattern-matching", "early-exit", "fail-fast", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "psutil>=5.8.0",   # For inspecting subprocess file descriptors
    "tenacity>=8.0.0"  # For retry with exponential backoff
]

[project.optional-dependencies]
perl = ["regex"]  # For Perl-compatible regex (-P flag)
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
]

[project.scripts]
earlyexit = "earlyexit.cli:main"
ee = "earlyexit.cli:main"  # Short alias for convenience
earlyexit-stats = "earlyexit.telemetry_cli:main"
earlyexit-analyze = "earlyexit.telemetry_cli:main"
earlyexit-feedback = "earlyexit.telemetry_cli:main"
earlyexit-export = "earlyexit.export_cli:main_export"
earlyexit-import = "earlyexit.export_cli:main_import"
earlyexit-clear = "earlyexit.telemetry_cli:main"
earlyexit-suggest = "earlyexit.telemetry_cli:main"
earlyexit-profile = "earlyexit.profile_cli:main"

[project.urls]
Homepage = "https://github.com/rsleedbx/earlyexit"
Repository = "https://github.com/rsleedbx/earlyexit"
"Bug Tracker" = "https://github.com/rsleedbx/earlyexit/issues"

[tool.setuptools]
packages = ["earlyexit"]

[tool.setuptools.package-data]
earlyexit = ["py.typed"]

[tool.pytest.ini_options]
markers = [
    "shell: marks tests as shell script integration tests (can be slow)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

